--- a/editor/editor.html
+++ b/editor/editor.html
@@ -23,7 +23,10 @@
         </optgroup>
 
         <optgroup label="Templates:">
+          <option value="templates/empty">Empty</option>
           <option value="templates/minimal">Minimal</option>
+          <option value="templates/sprites">Sprite Demo</option>
+          <option value="templates/tunes">Tunes Demo</option>
         </optgroup>
       </select>
     </aside>
