Refactoring, modularization, tunes playback

--- a/editor/editor.html
+++ b/editor/editor.html
@@ -39,176 +39,9 @@
     <script src="/lib/codemirror/codemirror.js"></script>
     <script src="/lib/codemirror/clike.js"></script>
 
-    <script>
-      var editor;
-      var lastBuild;
-
-      // Editor form
-      var form;
-
-      // Set up CodeMirror for editing
-      editor = CodeMirror.fromTextArea(
-        document.getElementById("codeeditor"),
-        {
-          theme: "night",
-          tabsize: 2,
-          lineNumbers: true,
-          lineWrapping: true
-        }
-      );
-
-
-      // Update editor
-      function setEditorContents(v) {
-        editor.setValue(v);
-
-        // Set up markers
-        markSprites(v);
-      }
-
-      function updateEditorContents(r) {
-        // Response object
-        if (typeof r === 'object' && 'text' in r) {
-          // TODO: check if returned an error
-
-          return r.text().then(function(body) {
-            setEditorContents(body);
-          });
-
-        // Plain ole' string stuff
-        } else {
-          setEditorContents(r);
-        }
-      }
-
-      // Fetch last build source
-      function load() {
-        fetch("/src/build").then(
-          // Update editor to last build source
-          updateEditorContents
-
-        // Listen for changes & compile
-        ).then(function() {
-          // Create throttled version to avoid stressing the server & save bandwidth
-          throttleCheckBuild = throttle(checkBuild, 1000);
-
-          // Check builds if document changed
-          editor.on("changes", throttleCheckBuild);
-
-          // Build
-          throttleCheckBuild();
-
-        }).catch(function(e) { console.error(e); });
-      }
-
-      function throttle(callback, delay) {
-        var lastRequest = null;
-        var lastArgs = [];
-        var timeout;
-
-        var fulfill = function() {
-          lastRequest = null;
-          timeout = null;
-          callback.call(null, ...lastArgs);
-        }
-
-        return function(...args) {
-          lastArgs = args;
-
-          // Restart throttle
-          if (timeout) clearTimeout(timeout);
-          timeout = setTimeout(fulfill, delay);
-          lastRequest = Date.now();
-        }
-      }
-
-
-      // Build form document and check for errors, size etc.
-      function checkBuild(ed, changes) {
-        editor.save();
-
-        form = form || document.querySelector('form');
-
-        fetch('/build', {
-          method: 'post',
-          body: new FormData(form)
-
-        }).then(function(r) {
-          return r.json();
-
-        }).then(function(res) {
-          lastBuild = res;
-
-          if (lastBuild.error) {
-            var msgs = document.getElementById("servermsgs")
-              msgs.classList.add("error");
-              msgs.textContent = lastBuild.error;
-
-              if (lastBuild.compiler['build.ino'] && lastBuild.compiler['build.ino'].length > 0) {
-                lastBuild.compiler['build.ino'].forEach(function(err) {
-                  console.log(err);
-                  var blip = document.createElement("div");
-                    blip.appendChild(document.createTextNode(err.msg));
-                    blip.className = "build-error";
-                  editor.addLineWidget(err.line - 1, blip, {coverGutter: false, noHScroll: true});
-                });
-              }
-          }
-        }).catch(function(e) {
-          console.error("Error checking build: ", e);
-        });
-      }
-
-
-      function init() {
-
-        // Load switch handler
-        toolbarLoad = document.querySelector('select[name="load"]');
-        toolbarLoad.addEventListener('change', function(e) {
-          var data = { 'load': e.target.value };
-          console.log(e.target, e.target.value, data);
-
-          if (data.load) {
-            fetch('/load', {
-              method: 'post',
-              headers: { 'Content-Type': 'application/json' },
-              body: JSON.stringify(data)
-            }).then(updateEditorContents).then(function() {
-              toolbarLoad.value = '';
-            });
-          }
-        });
-
-        // Load editor contents
-        load();
-      }
-
-      //var RX_SPRITES = /PROGMEM const unsigned char (\w+)\[\][\s\r\n]*=(?:[\s\r\n]|\r?\n\/\/[^\n]*)*{([^\}]+)}/g;
-      var RX_SPRITES = /PROGMEM const unsigned char (\w+)\[\][\s\r\n]*=[^{;]*{([^\}]+)}/g;
-
-      function markSprites(src) {
-        var e;
-        var src = src || editor.getValue();
-        var pS,pE, sprite, markers = [];
-
-        while ((e = RX_SPRITES.exec(src)) !== null) {
-          pE = editor.posFromIndex(RX_SPRITES.lastIndex - 1);
-          pS = editor.posFromIndex(RX_SPRITES.lastIndex - 1 - e[2].length);
-          console.log(RX_SPRITES.lastIndex, pS,pE, e);
-
-          // Image editor sprite markers
-          sprite = document.createElement('span');
-          sprite.className = "sprite";
-          markers.push(
-            editor.markText({ line: pS.line, ch: pS.ch },{ line: pE.line, ch: pE.ch }, { replacedWith: sprite, clearOnEnter: true })
-          );
-
-          // Clear marker on double click - TODO: pop up pixel-editor instead
-          sprite.ondblclick = (function() { this.clear(); }).bind(markers[markers.length-1]);
-        }
-      }
-
-      setTimeout(init, 0);
-    </script>
+    <script src="/js/main.js"></script>
+    <script src="/js/linter.js"></script>
+    <script src="/js/sprites.js"></script>
+    <script src="/js/tunes.js"></script>
   </body>
 </html>
