More examples, fixes

--- a/editor/editor.html
+++ b/editor/editor.html
@@ -21,6 +21,11 @@
           <option value="rundino">Rund.ino</option>
           <option value="rundino/halloween">Rund.ino Halloween Ed.</option>
         </optgroup>
+        <optgroup label="Arduboy Examples:">
+          <option value="examples/ardubreakout">ArduBreakout</option>
+          <option value="examples/floatyball">FloatyBall</option>
+          <option value="examples/tunes">Tunes Demo</option>
+        </optgroup>
 
         <optgroup label="Templates:">
           <option value="templates/empty">Empty</option>
