--- a/editor/composer.html
+++ b/editor/composer.html
@@ -8,6 +8,9 @@
 
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/composer.css">
+
+  <!--<link rel="shortcut icon" href="/favicon.ico">-->
+  <link rel="icon" type="image/png" href="/res/composer.png" />
 </head>
 <body>
   <div class="code">
@@ -127,6 +130,10 @@
   <script src="/lib/codemirror/clike.js"></script>
 
   <script src="js/main.js"></script>
+  <script src="js/util.js"></script>
+
+  <script src="js/synth.js"></script>
+  <script src="js/score.js"></script>
   <script src="js/tunes.js"></script>
 </body>
 </html>
