--- a/editor/painter.html
+++ b/editor/painter.html
@@ -1,8 +1,66 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-<title>Clouduboy Painter</title>
-</head>
-<body>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Clouduboy Editor</title>
+
+    <link rel="stylesheet" href="/lib/codemirror/codemirror.css">
+    <link rel="stylesheet" href="/lib/codemirror/night.css">
+
+    <link rel="stylesheet" href="/css/style.css">
+    <style>
+    iframe {
+      width: 80vmin;
+      height: 80vmin;
+      position: absolute;
+      z-index: 1000;
+      top: calc((100vh - 80vmin) / 2);
+      left: calc((100vw - 80vmin) / 2);
+      border: none;
+    }
+    </style>
+  </head>
+
+  <body>
+    <aside class="toolbar">
+      <button name="download">⏬</button>
+      <select name="load">
+        <option value="" default>---</option>
+
+        <optgroup label="Load:">
+          <option value="rundino">Rund.ino</option>
+          <option value="rundino/halloween">Rund.ino Halloween Ed.</option>
+        </optgroup>
+        <optgroup label="Arduboy Examples:">
+          <option value="examples/ardubreakout">ArduBreakout</option>
+          <option value="examples/floatyball">FloatyBall</option>
+          <option value="examples/tunes">Tunes Demo</option>
+        </optgroup>
+
+        <optgroup label="Templates:">
+          <option value="templates/empty">Empty</option>
+          <option value="templates/minimal">Minimal</option>
+          <option value="templates/sprites">Sprite Demo</option>
+          <option value="templates/tunes">Tunes Demo</option>
+        </optgroup>
+      </select>
+    </aside>
+
+    <form>
+      <textarea id="codeeditor" name="code" contenteditable="true" rows="10" cols="80"></textarea>
+    </form>
+    <div id="servermsgs" class="servermsgs"></div>
+
+    <iframe src="" style="display:none"></iframe>
+
+    <script src="/lib/codemirror/codemirror.js"></script>
+    <script src="/lib/codemirror/clike.js"></script>
+
+    <script src="/lib/pif/lib.js"></script>
+
+    <script src="/js/main.js"></script>
+    <script src="/js/linter.js"></script>
+    <script src="/js/sprites.js"></script>
+  </body>
 </html>
