--- a/editor/editor.html
+++ b/editor/editor.html
@@ -44,9 +44,17 @@
     <script src="/lib/codemirror/codemirror.js"></script>
     <script src="/lib/codemirror/clike.js"></script>
 
+    <script src="/lib/pif/lib.js"></script>
+
     <script src="/js/main.js"></script>
+    <script src="/js/util.js"></script>
+
     <script src="/js/linter.js"></script>
+
     <script src="/js/sprites.js"></script>
+
+    <script src="/js/synth.js"></script>
+    <script src="/js/score.js"></script>
     <script src="/js/tunes.js"></script>
   </body>
 </html>
