Complete Sprite-editor overhaul

--- a/editor/editor.html
+++ b/editor/editor.html
@@ -41,6 +41,8 @@
     </form>
     <div id="servermsgs" class="servermsgs"></div>
 
+    <iframe id="codeplugin" src="" style="display:none"></iframe>
+
     <script src="/lib/codemirror/codemirror.js"></script>
     <script src="/lib/codemirror/clike.js"></script>
 
@@ -48,6 +50,8 @@
 
     <script src="/js/main.js"></script>
     <script src="/js/util.js"></script>
+
+    <script src="/js/codeplugin.js"></script>
 
     <script src="/js/linter.js"></script>
 
