--- a/editor/painter.html
+++ b/editor/painter.html
@@ -64,6 +64,8 @@
     <script src="/lib/pif/lib.js"></script>
 
     <script src="/js/main.js"></script>
+    <script src="/js/util.js"></script>
+
     <script src="/js/linter.js"></script>
     <script src="/js/sprites.js"></script>
   </body>
