Added: initiate flashing from the browser

--- a/editor/editor.html
+++ b/editor/editor.html
@@ -13,7 +13,8 @@
 
   <body>
     <aside class="toolbar">
-      <button name="download">⏬</button>
+      <button name="flash" title="Flash Arduboy...">⚡️</button>
+      <button name="download" title="Download sketch...">↓</button>
       <select name="load">
         <option value="" default>---</option>
 
@@ -60,5 +61,7 @@
     <script src="/js/synth.js"></script>
     <script src="/js/score.js"></script>
     <script src="/js/tunes.js"></script>
+
+    <script src="/js/flasher.js"></script>
   </body>
 </html>
