Session handling, reorganized build & templates, new demos

--- a/editor/editor.html
+++ b/editor/editor.html
@@ -22,6 +22,7 @@
           <option value="rundino">Rund.ino</option>
           <option value="rundino/halloween">Rund.ino Halloween Ed.</option>
         </optgroup>
+
         <optgroup label="Arduboy Examples:">
           <option value="examples/ardubreakout">ArduBreakout</option>
           <option value="examples/floatyball">FloatyBall</option>
@@ -33,6 +34,12 @@
           <option value="templates/minimal">Minimal</option>
           <option value="templates/sprites">Sprite Demo</option>
           <option value="templates/tunes">Tunes Demo</option>
+          <option value="templates/scene">Scene Demo</option>
+        </optgroup>
+
+        <optgroup label="Team A.R.G. Games:">
+          <option value="teamarg/shadowrun-devkit">Shadowrun (DevKit)</option>
+          <option value="teamarg/epiccrates-devkit">Epic Crates of Mass Destruction (DevKit)</option>
         </optgroup>
       </select>
     </aside>
