Typo fix in game list

--- a/editor/editor.html
+++ b/editor/editor.html
@@ -38,7 +38,7 @@
         </optgroup>
 
         <optgroup label="Team A.R.G. Games:">
-          <option value="teamarg/shadowrun-devkit">Shadowrun (DevKit)</option>
+          <option value="teamarg/shadowrun-devkit">Shadow Runner (DevKit)</option>
           <option value="teamarg/epiccrates-devkit">Epic Crates of Mass Destruction (DevKit)</option>
         </optgroup>
       </select>
